cambios en scss

--- a/index.html
+++ b/index.html
@@ -45,44 +45,94 @@
         </div>
       </div>
     </nav>
+    <!-- fin navbar -->
     <div class="container-fluid">
       <h1 class="titulo">PERROS DEL MUNDO</h1>
       <h2>TODAS LAS RAZAS</h2>
     </div>
   </header>
-  <!-- fin navbar -->
+
   <main>
-    <small>NOMBRES FOTOS Y CARACTERISTICAS</small>
-    <p class="lead text-center container">¿Te has preguntado alguna vez cuántas razas de perros hay? La FCI (Fédération
+    <p class="lead text-center container"><span>¿Te has preguntado alguna vez cuántas razas de perros hay?</span> La FCI
+      (Fédération
       Cynologique Internationale) reconoce a más de 300 razas de perros, sin embargo, existen muchas otras federaciones
       y clubes que reconocen variaciones y otras razas, por lo que existen miles de razas de perros realmente. Por ello,
       en ExpertoAnimal te hemos preparado la lista más completa, en la que encontrarás todas las razas de perros que
       existen, con sus respectivos nombres, fotos y descripción. Pero, además de los nombres de razas de perros, también
       podrás descubrir si pertenecen o no a la FCI, su país de origen, las características más relevantes o el tipo de
       clima más indicado.
-
-      ¿Te preguntas cuáles son las mejores razas de perros? En nuestra lista completa también podrás filtrar según sus
+      <br>
+      <span>¿Te preguntas cuáles son las mejores razas de perros?</span> En nuestra lista completa también podrás
+      filtrar según sus
       capacidades, por su nivel de actividad física o esperanza de vida, entre otros factores. ¡Descubre pues todas las
       razas de perros del mundo! ¡Te encantará conocerlas! Así mismo, podrás filtrar también por razas de perros
       grandes, razas de perros medianos o razas de perros chiquitos o pequeños. También te indicaremos cuáles son las
       razas de perros peligrosos según la ley española. Beagle, jack russell terrier, pastor alemán, fox terrier toy,
       yorkshire terrier, chihuahua, pastor alemán, akita inu, labrador retriever, bulldog, bóxer, border terrier o
-      boyero de Berna son algunas de nuestras fichas más buscadas, ¡pero existen muchas más! ¡Descúbrelas!</p>
-    <!-- card -->
-    <div class="card" style="width: 18rem;">
-      <img src="https://placedog.net/115/167" class="card-img-top" alt="perro">
-      <div class="card-body">
-        <h5 class="card-title">Rosco</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-          content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+      boyero de Berna son algunas de nuestras fichas más buscadas, ¡pero existen muchas más! ¡Descúbrelas!
+    </p>
+    <h5>NOMBRES FOTOS Y CARACTERISTICAS</h5>
+    <div class="cards">
+      <!-- card1-->
+      <div class="card" style="width: 15rem;">
+        <img src="https://placedog.net/140/165" class="card-img-top" alt="perro1">
+        <div class="card-body">
+          <h5 class="card-title1">Alaskan malamute</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <a href="#" class="btn btn-primary">Mas info</a>
+        </div>
       </div>
+      <!-- fin card1 -->
+      <!-- card2-->
+      <div class="card" style="width: 15rem;">
+        <img src="https://placedog.net/140/166" class="card-img-top" alt="perro2">
+        <div class="card-body">
+          <h5 class="card-title2">Perro lobo herreño</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <a href="#" class="btn btn-primary">Mas info</a>
+        </div>
+      </div>
+      <!-- fin card2 -->
+      <!-- card3-->
+      <div class="card" style="width: 15rem;">
+        <img src="https://placedog.net/140/167" class="card-img-top" alt="perro3">
+        <div class="card-body">
+          <h5 class="card-title3">Bulldog frances</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <a href="#" class="btn btn-primary">Mas info</a>
+        </div>
+      </div>
+      <!-- fin card3 -->
     </div>
-    <!-- fin card -->
+  </main>  
+  <footer>
+    <ul class="redes">
+        <li>
+            <a href="https://es-la.facebook.com/">
+                <img class="redes" src="https://place-hold.it/40x40&text=log" alt="facebook">
+            </a>
+        </li>
+        <li>
+            <a href="https://www.instagram.com/">
+                <img class="redes" src="https://place-hold.it/40x40&text=log" alt="instagram">
+            </a>
+        </li>
+        <li>
+            <a href="https://twitter.com/tweeter">
+                <img class="redes" src="https://place-hold.it/40x40&text=log" alt="tweeter">
+            </a>
+        </li>
+    </ul>
+    <br>
+    <p>2022 © TODOS LOS DERECHOS RESERVADOS</p>
+</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"></script>
-  </main>
+  
 </body>
 
 </html>
